--- a/21.html
+++ b/21.html
@@ -23,6 +23,11 @@
 <script src="main.js"></script>
 </body>
 </html>
+<style>
+    .text{
+        top:30%;
+    }
+</style>
 
 <script>
 function goTo22() {
