--- a/4.html
+++ b/4.html
@@ -14,6 +14,7 @@
 </div>
 <img class="title" src="assets/titles/title4.png" alt="logo">
 <img class="text" src="assets/text/text4.png" alt="logo">
+<img class="computer" src="assets/elements/computer.png" alt="logo">
 
 
 
@@ -26,7 +27,7 @@
 <style>
     .text {
         left: 50%;
-        top: 30%;
+        top: 35%;
     }
 </style>
 
