--- a/6.html
+++ b/6.html
@@ -26,7 +26,8 @@
 <style>
     .text {
         left: 50%;
-        width: 65%;
+        width: 70%;
+        height: 60%;
         top: 30%;
     }
 </style>
