--- a/61.html
+++ b/61.html
@@ -26,8 +26,9 @@
 <style>
     .text {
         left: 50%;
-        width: 65%;
-        top: 30%;
+        width: 70%;
+        height: 60%;
+        top: 29%;
     }
 </style>
 
